# omaha-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/hello-world/: app_set.rs  http_request.rs  policy.rs
mock-omaha-server/: Cargo.toml  README.md
mock-omaha-server/src/: hash.rs  iter.rs  lib.rs  main.rs
omaha-client/: Cargo.toml
omaha-client/examples/hello-world/: README.md  installer.rs  main.rs  metrics.rs  storage.rs  timer.rs
omaha-client/src/: app_set.rs  clock.rs  common.rs  cup_ecdsa.rs  http_uri_ext.rs  installer.rs  lib.rs  metrics.rs  protocol.rs  request_builder.rs  state_machine.rs  storage.rs  time.rs  unless.rs  version.rs
omaha-client/src/installer/: stub.rs
omaha-client/src/metrics/: stub.rs
omaha-client/src/policy/: mock.rs  stub.rs
omaha-client/src/protocol/: request.rs  response.rs
omaha-client/src/protocol/response/: tests.rs
omaha-client/src/state_machine/: builder.rs  update_check.rs
omaha-client/src/storage/: memory.rs  stub.rs
src/: async_generator.rs  configuration.rs  cup_ecdsa.rs  http_request.rs  http_uri_ext.rs  policy.rs  storage.rs  time.rs
src/http_request/: mock.rs
src/metrics/: mock.rs
src/policy/: stub.rs
src/protocol/: request.rs
src/protocol/request/: tests.rs
src/request_builder/: tests.rs
src/state_machine/: builder.rs  observer.rs  update_check.rs
src/storage/: memory.rs  stub.rs
src/time/: complex.rs  time_source.rs  timers.rs
