[package]
name = "omaha_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.19"
ecdsa =  { version = "0.14.8", features = ["pem"] }
elliptic-curve = "0.12.3"
futures = "0.3.19"
hex = "0.3.2"
http = "0.2.4"
hyper = "0.14.19"
itertools = "0.10.1"
p256 = "0.11.1"
pkcs8 = { version = "0.9.0", features = ["pem"] }
pretty_assertions = "1.2.1"
rand = "0.8.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.7"
sha2 = "0.10.6"
signature = "1.6.4"
thiserror = "1.0.23"
tracing = "0.1.37"
typed-builder = "0.10.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
pin-project = "1.0.11"

[dev-dependencies]
assert_matches = "1.5.0"
url = "1.7.2"